# -taborder-favicon-fix

./: .gitignore  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Procfile  app.py  build-fix-permissions.sh  build-fix.sh  build-inline.sh  build-python-first.sh  build.sh  package.json  pyproject.toml  render.yaml  requirements.txt  setup.py  setup_database.py  standalone_app_enhanced.py  start.sh  tatus  test_api_reachability.py  test_frontend_mimic.py  test_health_api.py  test_json_parsing.py  test_local_registration.py  test_raw_data.py  test_registration_api.py  test_registration_debug.py  test_simple_debug.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  api.test.ts  index.css
frontend/src/components/: ActivityLogs.tsx  AdminDashboard.tsx  AdminSidebar.tsx  AnalyticsDashboard.tsx  ComboDashboard.js  ComboManagement.tsx  EnhancedProductForm.js  EnhancedVendorDashboard.tsx  ErrorBoundary.tsx  ExportButton.tsx  HelloWorld.tsx  ImportPreview.tsx  MetricsChart.tsx  MonitoringDashboard.tsx  NotificationMenu.tsx  OrderDetails.test.tsx  OrderDetails.tsx  OrderForm.tsx  OrderItemList.tsx  OrderReceipt.tsx  OrderStatusChip.tsx  OrderTable.test.tsx  OrderTable.tsx  OrderTimeline.tsx  PaymentButton.tsx  PaymentModal.tsx  ProtectedRoute.tsx  ReceiptActions.tsx  SessionTimer.tsx  SimpleComponent.test.tsx  StatusChangeDialog.tsx  UserForm.tsx  UserTable.tsx  VendorDashboard.tsx  (+5 more)
static/: check_missing_images.py
templates/: add_zone.html  base.html  import_zones.html  zone_dashboard.html  zone_map.html
(+10 files in other folders)
