[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taborder-flask-app"
version = "1.0.0"
description = "TabOrder USSD and Web Application"
authors = [{name = "TabOrder Team"}]
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.7",
    "redis==4.6.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
]

[tool.setuptools]
packages = ["taborder"] 